--- a/sass/gutenberg/blocks/_core-table.scss
+++ b/sass/gutenberg/blocks/_core-table.scss
@@ -9,14 +9,6 @@ th {
   font-family: $font-paragraphs;
   height: 3rem;
   padding: 1rem;
-
-  @media (max-width: 600px) {
-    display: inline-block;
-    height: auto;
-    padding: 10px 0;
-    text-align: center;
-    width: 100%;
-  }
 }
 
 // Table heading cells
@@ -30,5 +22,13 @@ th {
     margin-left: var(--padding-container-horizontal);
     margin-right: var(--padding-container-horizontal);
     width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+  }
+
+  @media (max-width: $width-grid-base + 40px) {
+    &.wp-block-table.alignwide {
+      margin-left: var(--padding-container-horizontal);
+      margin-right: var(--padding-container-horizontal);
+      width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+    }
   }
 }
